--- a/manage_students.html
+++ b/manage_students.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="header">
-    <h1>Manage Student Profiles</h1>
+    <h1>ㅤㅤManage Student Profiles</h1>
     <a href="admin_dashboard.html" class="back-btn">← Back to Dashboard</a>
   </div>
 
